# AI-Line-Follower

./: .gitmodules  Readme.md  Robot_Module_Interface_Description.ods
Gazebo/catkin_ws/src/: Readme.md
Gazebo/catkin_ws/src/MOVE_ME/: model.sdf
enki_Simulation/: HELP.md
enki_Simulation/clBP/: README.md
enki_Simulation/clBP/lib/: Layer.cpp  Net.cpp  Neuron.cpp
enki_Simulation/enki/: Enki.cpp  Makefile  enki.pro  moc_Enki.cpp  moc_predefs.h
enki_Simulation/enki/interactions/: ActiveSoundSource.h  Bluetooth.h
enki_Simulation/examples/line_follower/: Makefile  Racer.cpp  Racer.h  bpPlots.py  coordLearning.tsv  enkiSimulator.pro  errorLearning.tsv  fp1.tsv  fp2.tsv  fp3.tsv  fp4.tsv  fp5.tsv  parameters.h  predictors.tsv  qrc_textures.cpp  run.cpp  stats.tsv  weight_distances.tsv
enki_Simulation/examples/stock_robots/: Makefile  Playground.cpp
include/clbp/: Net.h  Neuron.h
interface_specifications/: NeuralNet_Module_Interface_Description.ods  Readme.md
lib/: Layer.cpp  Net.cpp  Neuron.cpp
lib/CLDL/: CMakeCache.txt
lib/CLDL/tests/: Makefile
lib/catkin_ws/devel/: setup.sh
lib/catkin_ws/src/RQT_NeuralNetworkDiagnostics/rqt_neural_network_diagnostics/: package.xml
lib/catkin_ws/src/RQT_NeuralNetworkDiagnostics/rqt_neural_network_diagnostics/scripts/: rqt_neural_network_diagnostics
neural_networks/: Readme.md
neural_networks/lib/: Net.cpp  executible  main.cpp  nn_interface.cpp
neural_networks/lib/CLDL/: Makefile  cmake_install.cmake
neural_networks/lib/CLDL/tests/: tests  (+1 more)
neural_networks/lib/catkin_ws/: gdb.txt
physical_robot/: Readme.md
physical_robot/Camera/: Readme.md
physical_robot/Camera/OpenCV/: OpenCV.cpp
physical_robot/Camera/python-opencv/: OCV_getInput.py
physical_robot/ROS_packages/: Readme.md
physical_robot/ROS_packages/ros_mcp3208/: README.md
physical_robot/ROS_packages/ros_sumobot_motors_driver/: README.md
physical_robot/python-opencv/examples/: ReducedResolution.py
python-opencv/: CameraExample.py  CameraWithTrackbar.py  ReducedResolution.py
python-opencv/examples/: CameraExample.py
python-opencv/socket_comms/: executible  server.cpp
ros_packages/: Readme.md
ros_packages/Test_pack_for_srv_rqst/tester/: CMakeLists.txt  package.xml
ros_packages/enki_line_react_control/: CMakeLists.txt  package.xml
ros_packages/enki_line_react_control/src/: line_react_control.cpp
ros_packages/line_react_control/: CMakeLists.txt
ros_packages/line_react_control/src/: line_react_control.cpp
rqt_plugins/: GUI_plugin_interface_description.ods  Readme.md
rqt_plugins/rqt_line_sensor_control/: CMakeLists.txt  package.xml  setup.py
rqt_plugins/rqt_line_sensor_control/include/rqt_line_sensor_control/: LineSensorControl.h
rqt_plugins/rqt_line_sensor_control/launch/: rqt_line_sensor_control.launch
rqt_plugins/rqt_line_sensor_control/scripts/: rqt_line_sensor_control
rqt_plugins/rqt_line_sensor_control/src/rqt_line_sensor_control/: LineSensorControl.cpp  LineSensorControl.ui
rqt_plugins/rqt_line_sensor_control/srv/: GetSensorsConfig.srv  GetSensorsThreshold.srv  GetSensorsWeights.srv
rqt_plugins/rqt_line_sensor_view/: package.xml  plugin.xml
rqt_plugins/rqt_line_sensor_view/include/rqt_line_sensor_view/: LineSensorView.h  QLed.h
rqt_plugins/rqt_line_sensor_view/launch/: rqt_line_sensor_view.launch
rqt_plugins/rqt_line_sensor_view/scripts/: rqt_line_sensor_view
rqt_plugins/rqt_line_sensor_view/src/rqt_line_sensor_view/: LineSensorView.cpp  LineSensorView.ui
rqt_plugins/rqt_neural_net_control/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_plugins/rqt_neural_net_control/include/rqt_neural_net_control/: NeuralNetControl.h
rqt_plugins/rqt_neural_net_control/launch/: rqt_neural_net_control.launch
rqt_plugins/rqt_neural_net_control/scripts/: rqt_neural_net_control
rqt_plugins/rqt_neural_net_control/src/rqt_neural_net_control/: NeuralNetControl.cpp  NeuralNetControl.ui
rqt_plugins/rqt_neural_net_control/srv/: GetNeuralNetConfig.srv
rqt_plugins/rqt_neural_network_diagnostics/: CMakeLists.txt  plugin.xml  setup.py
rqt_plugins/rqt_neural_network_diagnostics/launch/: rqt_neural_network_diagnostics.launch
simulators/: Readme.md
simulators/enkiSimulator/: .gitignore  AUTHORS  README.md
simulators/enkiSimulator/enki/: Enki.cpp  Enki.h  Makefile  PhysicalEngine.cpp
simulators/enkiSimulator/examples/ros_example/catkin_ws/src/line_follower/: CMakeLists.txt  Makefile  Racer.cpp  Racer.h  bpPlots.py  coordLearning.tsv  coordReflex.tsv  errorLearning.tsv  errorReflex.tsv  run.cpp  speeds.tsv  weight_distances.tsv
(+112 files in other folders)
