<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>rqt_line_sensor_view</name>
  <version>1.0.0</version>
  <description>rqt_line_sensor_view provides a rqt GUI plugin to view the state of a robot's line sensors</description>

  <maintainer email="mcbottcher@gmail.com">Mikkel Caschetto-Bottcher</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://www.bla.com</url> -->
  <author email="mcbottcher@gmail.com">Mikkel Caschetto-Bottcher</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>std_msgs</depend>


  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
