<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>rqt_neural_net_control</name>
  <version>1.0.0</version>
  <description>rqt_neural_net_control provides a GUI plugin to set configuration parameters for a neural network package</description>

  <maintainer email="mcbottcher@gmail.com">Mikkel Caschetto</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://www.bla.com</url> -->
  <author email="mcbottcher@gmail.com">Mikkel Caschetto</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
