<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>rqt_neural_network_diagnostics</name>
  <version>1.0.0</version>
  <description>rqt_neural_network_diagnostics provides a GUI plugin to display neural network diagnostic information</description>

  <maintainer email="mcbottcher@gmail.com">Mikkel Caschetto</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://www.bla.com</url> -->
  <author email="mcbottcher@gmail.com">Mikkel Caschetto</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>


  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
